correct title aligning

--- a/services/frontend/src/app/material/components/dialog.scss
+++ b/services/frontend/src/app/material/components/dialog.scss
@@ -38,6 +38,10 @@
     height: auto;
   }
 
+  .mat-dialog-title {
+    margin-bottom: 0px
+  }
+
   .mat-dialog-header {
     display: flex;
     flex-direction: row;
